--- a/ADTDemo/ADTDemo.csproj
+++ b/ADTDemo/ADTDemo.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompactDisc.cs" />
     <Compile Include="EducationInstitutes.cs" />
+    <Compile Include="GenericsDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackDemo.cs" />
