Added doubly linked list demo and exception handling demo

--- a/ADTDemo/ADTDemo.csproj
+++ b/ADTDemo/ADTDemo.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompactDisc.cs" />
+    <Compile Include="DoublyLinkedListDemo.cs" />
     <Compile Include="EducationInstitutes.cs" />
+    <Compile Include="ExceptionHandlingDemo.cs" />
     <Compile Include="GenericsDemo.cs" />
     <Compile Include="LinkedListDemo.cs" />
     <Compile Include="Program.cs" />
